# RockPaperScissorsKata

./: CMakeLists.txt  README.md
.devcontainer/: devcontainer.json
src/: RockPaperScissors.cpp  RockPaperScissors.h
test/: RockPaperScissors_test.cpp
